package NYT.NExecNode.NProto;

import "yt_proto/yt/core/misc/proto/guid.proto";
import "yt/server/node/exec_node/artifact.proto";

////////////////////////////////////////////////////////////////////////////////

message TLayerMeta
{
    required NYT.NExecNode.NProto.TArtifactKey artifact_key = 1;
    required int64 size = 2;
    required NYT.NProto.TGuid id = 3;
}

message TVolumeMeta
{
    repeated NYT.NExecNode.NProto.TArtifactKey layer_artifact_keys = 1;
    repeated string layer_paths = 2;
    required NYT.NProto.TGuid id = 3;
    optional int32 type = 4; // EVolumeType
}

////////////////////////////////////////////////////////////////////////////////
